Package: aroma.core
===================

Version: 2.0.3 [2011-02-28]
o GENERALIZATION: Now the default for createImage() for matrix is to 
  test to create images according to aroma settings option
  'output/ImageClasses'.
o Now write() and read() for RasterImage throws an informative error
  message explaining that the 'png' package is needed.
o BUG FIX: colorize() for Image would throw '<simpleError in ...: could
  not find function "colorMode">', because the colorMode() function
  needs to be explicitly imported after the recent package cleanups.
o BUG FIX: colorize() for Image try to call createImage() using a
  vector instead of a matrix.
o BUG FIX: createImage() for matrix would not result the first possible
  image created (when testing different image classes) but instead
  continue trying to create image for all possible classes. 
  For instance, this meant that although you had the 'EBImage' package
  installed, but not the 'png' package, it would still in the end try
  to (also) use 'png' package.  If writing PNG images to file, say via
  ArrayExplorer, this would result in "Error in loadNamespace(name) : 
  there is no package called 'png'".  Thanks Richard Beyer at
  University of Washington for reporting on this.


Version: 2.0.2 [2011-02-19]
o GENERALIZATION: Extended the default root paths of findAnnotationData()
  to be annotationData/ and annotationData,<tags>/


Version: 2.0.1 [2011-02-19]
o CLEANUP: Moved static getTags() to Arguments to R.filesets v0.9.3.
o CLEANUP: Deprecated static method importFromTable() for FileMatrix.
o CLEANUP: Removed several deprecated methods.


Version: 2.0.0 [2011-02-16]
o No updates.  Submitted to CRAN.


Version: 1.9.4 [2011-02-07]
o CLARIFICATION: Now the exception thrown by getRawCopyNumbers() for
  CopyNumberSegmentationModel, when there are too many non-finite 
  signals, gives a more informative error message containing 
  information also on which sample, reference and chromosome the