@@ -88,9 +88,9 @@ setMethodS3("exportFracBDiffSet", "AromaUnitFracBCnBinarySet", function(this, re
     # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     # Allocating
     # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    verbose && enter(verbose, "Allocating temporary output file");
-    pathnameT <- sprintf("%s.tmp", pathname);
-    pathnameT <- Arguments$getWritablePathname(pathnameT, mustNotExist=TRUE);
+    verbose && enter(verbose, "Allocating (temporary) output file");
+    pathnameT <- pushTemporaryFile(pathnameT, verbose=verbose);
+
     asb <- AromaUnitSignalBinaryFile$allocate(pathnameT, nbrOfRows=nbrOfUnits(df), platform=platform, chipType=chipType);
     verbose && print(verbose, asb);
     verbose && exit(verbose);
@@ -153,14 +153,9 @@ setMethodS3("exportFracBDiffSet", "AromaUnitFracBCnBinarySet", function(this, re
     verbose && exit(verbose);
 
 
-    # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     # Renaming temporary file
-    # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-    verbose && enter(verbose, "Renaming temporary output file");
-    file.rename(pathnameT, pathname);
-    if (!isFile(pathname)) {
-      throw("Failed to rename temporary file ('", pathnameT, "') to final file ('", pathname, "')");
-    }
+    pathname <- popTemporaryFile(pathnameT, verbose=verbose);
+
     verbose && exit(verbose);
 
     verbose && exit(verbose);
