@@ -184,14 +184,8 @@ setMethodS3("writeDataFrame", "AromaUnitSignalBinarySet", function(this, filenam
   verbose && cat(verbose, "Destination pathname: ", pathname);
 
 
-  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   # Write to a temporary file
-  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  verbose && enter(verbose, "Allocating temporary file");
-  pathnameT <- sprintf("%s.tmp", pathname);
-  pathnameT <- Arguments$getWritablePathname(pathnameT, mustNotExist=TRUE);
-  verbose && cat(verbose, "Temporary destination pathname: ", pathnameT);
-  verbose && exit(verbose);
+  pathnameT <- pushTemporaryFile(pathname, verbose=verbose);
 
 
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -424,18 +418,8 @@ setMethodS3("writeDataFrame", "AromaUnitSignalBinarySet", function(this, filenam
   verbose && exit(verbose);
 
 
-  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Rename temporary file
-  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  verbose && enter(verbose, "Renaming temporary file");
-  file.rename(pathnameT, pathname);
-  if (isFile(pathnameT)) {
-    throw("Failed to rename temporary file: ", pathnameT, " -> ", pathname);
-  }
-  if (!isFile(pathname)) {
-    throw("Failed to rename temporary file: ", pathnameT, " -> ", pathname);
-  }
-  verbose && exit(verbose);
+  # Renaming temporary file
+  pathname <- popTemporaryFile(pathnameT, verbose=verbose);
 
 
   verbose && enter(verbose, "Loading output data file");
